Orthographic Camera not aligned when using Align Active Camera to Selected #99653

Closed
opened 2022-07-12 21:45:21 +02:00 by Ed · 4 comments

System Information
Operating system: Windows-10-10.0.19042-SP0

Blender Version
Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: a2d59b2dac, type: release
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557, type: release
Works: version: 2.93.9, branch: master, commit date: 2022-04-19 14:25, hash: 31712ce77a, type: release

Short description of error
Orthographic Camera is not aligned to selected object when Align Active Camera to Selected is used.

Exact steps for others to reproduce the error
Start with default Blender scene with Cube and Camera.
Transform the Cube location 5 meters in X direction (optional; but exaggerates the issue).
Select the Camera, go to Object Properties, set Lens Type from Perspective (default) to Orthographic
Select the Cube, go to View -> Align View -> Align Active Camera to Selected

Result: Camera viewpoint is not aligned to the Cube.
This issue does not occur with a Perspective (default) camera. Only Orthographic camera.

Thanks.

**System Information** Operating system: Windows-10-10.0.19042-SP0 **Blender Version** **Broken**: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: a2d59b2dac9e, type: release **Broken**: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca3055776, type: release **Works**: version: 2.93.9, branch: master, commit date: 2022-04-19 14:25, hash: 31712ce77a6a, type: release **Short description of error** Orthographic Camera is not aligned to selected object when `Align Active Camera to Selected` is used. **Exact steps for others to reproduce the error** Start with default Blender scene with Cube and Camera. Transform the Cube location 5 meters in X direction (optional; but exaggerates the issue). Select the Camera, go to Object Properties, set Lens Type from Perspective (default) to Orthographic Select the Cube, go to View -> Align View -> Align Active Camera to Selected Result: Camera viewpoint is not aligned to the Cube. This issue does not occur with a Perspective (default) camera. Only Orthographic camera. Thanks.
Author

Added subscriber: @ekair

Added subscriber: @ekair

This issue was referenced by e1f1125909

This issue was referenced by e1f1125909829d377dd56bc0dd9501841b54ec39

This issue was referenced by 9422627155

This issue was referenced by 94226271556baacc5a77432fc9c62638901ce664

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2022-07-13 08:42:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99653
No description provided.