Fix T99653: "Align Active Camera to Selected" fails with ortho camera

There were two bugs, a regression in [0] and the object-data wasn't
tagged for depsgraph updating.

[0]: 19df0e3cfd5b9fed891ed81dd1123b2351605a7d